Bug Fix (Image resolution (work now with Fold) and Drinks now scrollbar)

--- a/src/app/album/album.page.scss
+++ b/src/app/album/album.page.scss
@@ -25,10 +25,11 @@ ion-title, ion-content{
   padding-left: 15%;
   padding-right: 15%;
   padding-top: 5%;
+  max-width:950px;
 }
 
 ion-row {
-  padding-top: 40vh;
+  padding-top: 80%;
 }
 
 .main {
