--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -23,6 +23,9 @@ ion-slides {
   color: #fff;
   font-family: 'Spotify';
 }
+.image-box {
+  max-width:350px;
+}
 
 ion-slide {
   display: block;
